# wishlist-app-codex

./: .dockerignore  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  tasks.md
.github/workflows/: ci.yml
apps/api/: .env.example  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260220_01_initial.py  20260221_01_drop_occasion_event_date.py
apps/api/app/: main.py
apps/api/app/api/: deps.py  router.py
apps/api/app/api/routes/: auth.py  items.py  public.py  system.py  wishlists.py  ws.py
apps/api/app/core/: config.py  constants.py  security.py
apps/api/app/db/: session.py
apps/api/app/models/: __init__.py  contribution.py  enums.py  guest_session.py  link_preview.py  mixins.py  oauth_account.py  realtime_event.py  reservation.py  user.py  wishlist.py  wishlist_item.py
apps/api/app/realtime/: manager.py
apps/api/app/schemas/: auth.py  public.py  wishlist.py
apps/api/app/services/: auth_service.py  event_service.py  link_preview_service.py  utils.py  wishlist_service.py
apps/api/tests/: test_core_flow.py  test_link_preview.py
apps/web/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/hooks/: use-wishlist-realtime.ts
apps/web/src/lib/: api.ts  (+3 more)
docs/: ai-worklog.md  architecture.md  demo-script.md  product-decisions.md
infra/docker/: api.Dockerfile  web.Dockerfile
infra/render/: render.yaml
infra/vercel/: vercel.json
(+19 files in other folders)
